# Kaleidoscope

./: .gitignore  LICENSE  README.md
Data/Engine/: sample.fs.spv  sample.vs.spv
Project/: CMakeLists.txt  GenerateSolution.bat
Project/Application/: CMakeLists.txt
Project/Application/Player/: CMakeLists.txt
Project/Runtime/: CMakeLists.txt
Project/Runtime/CrossPlatform/: CMakeLists.txt
Project/Runtime/GraphicDriver/: CMakeLists.txt
RawData/: CompileShader.bat
RawData/Engine/ShaderSource/: sample.shader.frag  sample.shader.vert
Source/Application/Player/: GraphicDriverError.h  Main.cpp  PlayerPrivate.h  VulkanGraphicDriver.cpp  VulkanGraphicDriver.h  WindowsApplication.cpp  WindowsApplication.h
Source/Runtime/CrossPlatform/: CrossPlatform.h  Platform.h  StandardC.cpp  StandardC.h
Source/Runtime/GraphicDriver/: GraphicDriverPrivate.h  VulkanGraphicDriver.cpp  VulkanGraphicDriver.h
