set(CUR_TARGET_NAME "Player")
set(CUR_PROJECT_SOURCE_CODE_ROOT "${PROJECT_SOURCE_CODE_ROOT}/Application/Player")

FILE(GLOB_RECURSE TARGET_SOURCE_FILE_LIST ${CUR_PROJECT_SOURCE_CODE_ROOT}/*.cpp)
FILE(GLOB_RECURSE TARGET_HEADER_FILE_LIST ${CUR_PROJECT_SOURCE_CODE_ROOT}/*.h)


add_executable(${CUR_TARGET_NAME} ${TARGET_SOURCE_FILE_LIST} ${TARGET_HEADER_FILE_LIST})
set_target_properties(${CUR_TARGET_NAME} PROPERTIES FOLDER "Application")
set_target_properties(${CUR_TARGET_NAME} PROPERTIES DEBUG_POSTFIX "_D")
source_group(TREE ${CUR_PROJECT_SOURCE_CODE_ROOT} PREFIX "Src" FILES ${TARGET_SOURCE_FILE_LIST})
source_group(TREE ${CUR_PROJECT_SOURCE_CODE_ROOT} PREFIX "Inc" FILES ${TARGET_HEADER_FILE_LIST})
target_include_directories(${CUR_TARGET_NAME} 
    PUBLIC ${PROJECT_SOURCE_CODE_ROOT}/Third-Party/GLFW/Include
    PUBLIC ${PROJECT_SOURCE_CODE_ROOT}/Third-Party/GLM/Include
    PUBLIC ${PROJECT_SOURCE_CODE_ROOT}/Third-Party/Vulkan/Include)
target_link_libraries(${CUR_TARGET_NAME} 
    PUBLIC ${PROJECT_SOURCE_CODE_ROOT}/Third-Party/GLFW/Library/glfw3dll.lib
    PUBLIC ${PROJECT_SOURCE_CODE_ROOT}/Third-Party/Vulkan/Library/vulkan-1.lib
    PUBLIC ${PROJECT_SOURCE_CODE_ROOT}/Third-Party/Vulkan/Library/VkLayer_utils.lib)

target_precompile_headers(${CUR_TARGET_NAME} PRIVATE "${CUR_PROJECT_SOURCE_CODE_ROOT}/PlayerPrivate.h")
set(CUR_PRECOMPILE_HEADER_CODE_ROOT "${PROJECT_BUILD_ROOT}/Application/Player/CMakeFIles/Player.dir")
FILE(GLOB_RECURSE TARGET_PRECOMPILE_HEADER_FILE_LIST ${CUR_PRECOMPILE_HEADER_CODE_ROOT}/*.*)
source_group(TREE ${CUR_PRECOMPILE_HEADER_CODE_ROOT} PREFIX "Pch" FILES ${TARGET_PRECOMPILE_HEADER_FILE_LIST})

target_compile_features(${CUR_TARGET_NAME} PUBLIC cxx_std_17)
