set(CUR_TARGET_GROUP_NAME "Runtime")
set(CUR_TARGET_NAME "CrossPlatform")
set(CUR_PROJECT_SOURCE_CODE_ROOT "${PROJECT_SOURCE_CODE_ROOT}/${CUR_TARGET_GROUP_NAME}/${CUR_TARGET_NAME}")

FILE(GLOB_RECURSE TARGET_SOURCE_FILE_LIST ${CUR_PROJECT_SOURCE_CODE_ROOT}/*.cpp)
FILE(GLOB_RECURSE TARGET_HEADER_FILE_LIST ${CUR_PROJECT_SOURCE_CODE_ROOT}/*.h)


add_library(${CUR_TARGET_NAME} STATIC ${TARGET_SOURCE_FILE_LIST} ${TARGET_HEADER_FILE_LIST})
set_target_properties(${CUR_TARGET_NAME} PROPERTIES FOLDER ${CUR_TARGET_GROUP_NAME})
set_target_properties(${CUR_TARGET_NAME} PROPERTIES DEBUG_POSTFIX "_D")
source_group(TREE ${CUR_PROJECT_SOURCE_CODE_ROOT} PREFIX "Src" FILES ${TARGET_SOURCE_FILE_LIST})
source_group(TREE ${CUR_PROJECT_SOURCE_CODE_ROOT} PREFIX "Inc" FILES ${TARGET_HEADER_FILE_LIST})


#target_precompile_headers(${CUR_TARGET_NAME} PRIVATE "${CUR_PROJECT_SOURCE_CODE_ROOT}/${CUR_TARGET_NAME}Private.h")
#set(CUR_PRECOMPILE_HEADER_CODE_ROOT "${PROJECT_BUILD_ROOT}/${CUR_TARGET_GROUP_NAME}/${CUR_TARGET_NAME}/CMakeFIles/${CUR_TARGET_NAME}.dir")
#FILE(GLOB_RECURSE TARGET_PRECOMPILE_HEADER_FILE_LIST ${CUR_PRECOMPILE_HEADER_CODE_ROOT}/*.*)
#source_group(TREE ${CUR_PRECOMPILE_HEADER_CODE_ROOT} PREFIX "Pch" FILES ${TARGET_PRECOMPILE_HEADER_FILE_LIST})

#target_compile_features(${CUR_TARGET_NAME} PUBLIC cxx_std_17)
